--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = "suixingpay-microservice"
 include "suixingpay-config"
 include "suixingpay-eureka"
 include "suixingpay-gateway"
-include "suixingpay-service"
+include "suixingpay-department"
+include "suixingpay-employee1"
+include "suixingpay-employee2"
