--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,9 @@ rootProject.name = "suixingpay-microservice"
 include "suixingpay-config"
 include "suixingpay-eureka"
 include "suixingpay-gateway"
+include "suixingpay-admin"
+include "suixingpay-zipkin"
+
 include "suixingpay-department"
 include "suixingpay-employee1"
 include "suixingpay-employee2"
