--- a/repository/application.yml
+++ b/repository/application.yml
@@ -40,3 +40,11 @@ zuul:
       url: suixingpay-employee
 test:
   name: 研发
+---
+spring:
+  profiles: sit
+ttt: 123
+---
+spring:
+  profiles: dev
+rrr: 444
